@@ -70,6 +70,9 @@ handle prototypes and support for the MS-DOS memory model, were removed from
 the libjpeg code, greatly improving its readability and making it easier to
 maintain and extend.
 
+[10] Fixed a segfault that occurred when calling output_message() with msg_code
+set to JMSG_COPYRIGHT.
+
 
 1.3.1
 =====
